added stex logo

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,11 @@
   height: 100%;
   width: 100%;
 }
+
+#logostex {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100px;
+  height: 100px;
+}
